# Turbinas_ML

./: .gitignore  README.md  pyproject.toml  requirements.txt
State of the Art/: State of the Art.csv  State of the Art.xlsx
data_processing/: split_dataset.py
src/: LR_Kfold_SMOTE.ipynb  LR_SMOTE_StndScaler.ipynb  __init__.py  probl1_NN.ipynb  probl1_logistic_regression.ipynb  probl1_logregr_svm.ipynb  probl1_randomforest.ipynb  probl1_svm.ipynb  probl1_xgboost.ipynb  probl2_knn.ipynb  probl2_svm.ipynb
src/augmentation/: __init__.py  smote_augment.py
src/data_processing/: split_dataset.py  split_dataset_p2.py
src/dataset/: dataset description.txt
src/models/: __init__.py  logistic_regression_aug_smote_20251119_010814.joblib  logistic_regression_aug_smote_20251119_010814_metadata.json  logistic_regression_aug_smote_scaled_20251119_010822.joblib  logistic_regression_aug_smote_scaled_20251119_010822_metadata.json  logistic_regression_normal_20251119_010811.joblib  logistic_regression_normal_20251119_010811_metadata.json  logistic_regression_scaled_20251119_010822.joblib  logistic_regression_scaled_20251119_010822_metadata.json  manage_models.py  probl1_logistic_regression_20251225_180546.joblib  probl1_logistic_regression_20251225_180546_metadata.json  probl1_lr_svm_20251226_115632_metadata.json  probl1_neural_network_20260103_205256.joblib  probl1_neural_network_20260103_205256_metadata.json  probl1_neural_network_20260103_214010.joblib  probl1_neural_network_20260103_214010_metadata.json  probl1_neural_network_20260103_215943.joblib  (+11 more)
src/training/: __init__.py  (+1 more)
(+29 files in other folders)
