[project]
name = "machine-learning-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.3.3",
    "scikit-learn>=1.7.2",
    "imbalanced-learn>=0.11.0",
    "joblib>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "ipykernel>=7.1.0",
]
